kubernetes/tb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-tb
  labels:
    app: deployment-tb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-tb

  template:
    metadata:
      labels:
        app: pod-tb
    spec:
      containers:

        ## credentials microservice api container:
        - name: cont-credentials-api
          image:  ramirohr/credentials_api:1.0.4
          ports:
          - containerPort: 7000   # fastapi image exposed port

          ## transfering secret into the an env variable:
        - name: cont-router-api
          image: ramirohr/tradingbot:1.1.0
          ports:
            - containerPort: 8000

          ## transfering secret into the an env variable:
